<resources>
    <string name="app_name">MustHave</string>
    <string name="GoalMe">Me</string>
    <string name="GoalHome">Home</string>
    <string name="GoalWork">Work</string>
    <string name="GoalRelations">Relations</string>
    <string name="messageNoGoalSelected">First you have to choose the areas that you want to improve.</string>
    <string name="main_phrase">We must do what we have to do in order to do what we want to do</string>
    <string name="action_goals_message">Turn your goals into reality. Choose the areas of improvement and don\'t stop until you reach your goals. </string>
    <string name="action_goals_progress_message">Every day you have to record the progress of the goals.</string>
    <string name="action_create_inspiration_message">If you can\'t make progress to reach your goals, create inspirations to motivate you to continue.</string>
    <string name="question_delete_all">Are you sure?</string>
    <string name="explanation_delete_all">All the data entered will be deleted to start the process again.</string>
    <string name="title_my_goals">MY AREAS OF IMPROVEMENT</string>
    <string name="message_no_goals_selected">You did not select any areas to improve.</string>
    <string name="title_actions">ACTIONS</string>
    <string name="option_name_register_advance">Record progress</string>
    <string name="option_name_remove_obstacle">Remove obstacle</string>
    <string name="option_name_admin_obstacles">Manage obstacles</string>
    <string name="title_configuration">CONFIGURATION</string>
    <string name="option_name_select_goals">Areas to improve</string>
    <string name="option_name_create_inspiration">Motivate me</string>
    <string name="option_name_start_again">Start again</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="btn_label_register">SIGN UP</string>
    <string name="btn_label_login">SIGN IN</string>
    <string name="CREATE_INSPIRATION_SET_FIELDS_VALIDATION">Enter a phrase and an image.</string>
    <string name="PERMISSIONS_GRANTED_EXTERNAL_STORAGE_MESSAGE">Granted permissions to write to external storage.</string>
    <string name="PERMISSIONS_DENIED_EXTERNAL_STORAGE_MESSAGE">Permissions denied to write to external storage.</string>
    <string name="APPLICATION_NAME">Must|Want App</string>
    <string name="NEEDS_ACCESS_EXTERNAL_STORAGE_MESSAGE">needs to Access Your External Storage</string>
    <string name="IMAGES_DIRECTORY_NAME">images</string>
    <string name="ACTIVITY_LABEL_SELECT_GOAL">Choose the area where you need to motivate yourself</string>
    <string name="ACTIVITY_LABEL_INSERT_PHRASE">Enter a motivational phrase</string>
    <string name="ACTIVITY_LABEL_SELECT_PICTURE">Choose a photo that motivates you to achieve your goals</string>
    <string name="ACTIVITY_LABEL_ACCEPT_BTN">Confirm</string>
    <string name="ACTIVITY_LABEL_CANCEL_BTN">Return</string>
    <string name="ACTIVITY_TITLE_OBSTACLES_LIST">OBSTACLES LIST</string>
    <string name="ACTIVITY_TITLE_PROGRESS_GOALS_LIST">PROGRESS RECORDS:</string>
    <string name="ACTIVITY_HINT_OBSTACLE_NAME">What do you have to do and when?</string>
    <string name="ACTIVITY_TITLE_SELEC_GOALS">WHAT DO YOU WANT TO IMPROVE?</string>
    <string name="ACTIVITY_LABEL_YES_BTN">Yes</string>
    <string name="ACTIVITY_LABEL_NO_BTN">No</string>
    <string name="RADIO_BTN_OPTION_PENDING">Pending</string>
    <string name="RADIO_BTN_OPTION_COMPLETE">Done</string>
    <string name="CREATE_OBSTACLE_SET_FIELDS_VALIDATION">You must enter what you have to do</string>
    <string name="amount_of_days">Humber of days:</string>
    <string name="default_amount_days">90</string>
    <string name="select_goals_explanation">Choose the areas in which you want to improve and enter the number of days you think it will take you to reach your goals.</string>
    <string name="progress_goals_explanation">If you progressed mark it <font color='#008000'>GREEN</font>.\n\nIf you went back it is <font color='#FF0000'>RED</font>.\n\nIf you did nothing, <font color='#dccd30'>YELLOW</font>.\n</string>
    <string name="progress_goals_explanationSecondLine">You can record advances or setbacks as many times as you want. To advance, the important thing is to have more progress than replays during the 24 hours of the day.</string>
    <string name="explanation_remove_obstacle">Remove from your mind the pending tasks that are not related to achieving your goals. Write them down and assign dates to do later.</string>
    <string name="label_pending_days">LEFT</string>
    <string name="label_days">DAYS</string>

</resources>