<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    >
    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_delete_all"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvExplanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explanation_delete_all"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textSize="16sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/ACTIVITY_LABEL_YES_BTN"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:backgroundTint="#6ABB6F"
            android:layout_marginEnd="10dp"/>
        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/ACTIVITY_LABEL_NO_BTN"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#6ABB6F"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>