<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".Activities.SelectGoals"    android:orientation="vertical"    android:background="@color/green_background_initial">    <androidx.appcompat.widget.Toolbar        android:id="@+id/tbSelectGoals"        android:layout_width="match_parent"        android:layout_height="?android:attr/actionBarSize"        android:background="@color/white"        app:title="@string/ACTIVITY_TITLE_SELEC_GOALS" />    <androidx.constraintlayout.widget.ConstraintLayout        android:id="@+id/clGoals"        android:layout_width="match_parent"        android:layout_height="match_parent"        android:background="@drawable/background_panel"        android:layout_margin="10dp"        android:layout_gravity="center">    <TextView        android:id="@+id/GoalMe"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:text="@string/GoalMe"        android:textSize="@dimen/GoalFontSize"        android:gravity="center"        android:background="@drawable/bg_goals"        android:layout_margin="10dp"        android:padding="15dp"        android:textStyle="bold"        app:layout_constraintTop_toTopOf="parent" />    <TextView        android:id="@+id/GoalHome"        android:layout_width="match_parent"        android:layout_height="wrap_content"        app:layout_constraintTop_toBottomOf="@+id/GoalMe"        android:text="@string/GoalHome"        android:textSize="@dimen/GoalFontSize"        android:gravity="center"        android:background="@drawable/bg_goals"        android:layout_margin="10dp"        android:padding="15dp"        android:textStyle="bold"/>    <TextView        android:id="@+id/GoalWork"        android:layout_width="match_parent"        android:layout_height="wrap_content"        app:layout_constraintTop_toBottomOf="@+id/GoalHome"        android:text="@string/GoalWork"        android:textSize="@dimen/GoalFontSize"        android:gravity="center"        android:background="@drawable/bg_goals"        android:layout_margin="10dp"        android:padding="15dp"        android:textStyle="bold"/>    <TextView        android:id="@+id/GoalRelations"        android:layout_width="match_parent"        android:layout_height="wrap_content"        app:layout_constraintTop_toBottomOf="@+id/GoalWork"        android:text="@string/GoalRelations"        android:textSize="@dimen/GoalFontSize"        android:gravity="center"        android:background="@drawable/bg_goals"        android:layout_margin="10dp"        android:padding="15dp"        android:textStyle="bold"/>        <androidx.fragment.app.FragmentContainerView            android:id="@+id/fragment_accept_cancel"            android:layout_width="match_parent"            android:layout_height="wrap_content"            app:layout_constraintBottom_toBottomOf="parent"            />    </androidx.constraintlayout.widget.ConstraintLayout></LinearLayout>