<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:background="@drawable/background_ligth_blue">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_action_needed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/flGoals"
        app:layout_constraintVertical_bias="0.4"
        tools:layout_editor_absoluteX="10dp" />


    <LinearLayout
        android:id="@+id/flGoals"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_goals_panel_main"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/llActions">

        <TextView
            android:id="@+id/tvGoals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/title_my_goals"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/section_title_size"/>

        <TextView
            android:id="@+id/tvGoalsNotSelected"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/message_no_goals_selected"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:textSize="@dimen/GoalFontSize"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMyGoals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/llConfig"
        android:background="@drawable/bg_panel_main_actions"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:id="@+id/tvActions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/title_actions"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/section_title_size"/>

        <LinearLayout
            android:id="@+id/llActionsItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/llActions"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/tvProgress"
                android:layout_height="50dp"
                android:layout_width="90dp"
                android:background="@drawable/bg_option_main"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/option_name_register_advance" />

            <TextView
                android:id="@+id/tvEmotion"
                android:layout_marginLeft="30dp"
                android:layout_height="50dp"
                android:layout_width="90dp"
                android:background="@drawable/bg_option_main"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/option_name_remove_obstacle" />

            <TextView
                android:id="@+id/tvManageObstacles"
                android:layout_marginLeft="30dp"
                android:layout_height="50dp"
                android:layout_width="90dp"
                android:background="@drawable/bg_option_main"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/option_name_admin_obstacles" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_panel_main"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        android:paddingBottom="10dp"
        >
    <TextView
        android:id="@+id/tvConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/title_configuration"
        android:layout_gravity="left"
        android:textStyle="bold"
        android:textSize="@dimen/section_title_size"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/llConfigItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/tvSetGoalOption"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_option_main"
            android:gravity="center"
            android:text="@string/option_name_select_goals"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAssignMotivation"
            android:layout_height="50dp"
            android:layout_width="90dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/bg_option_main"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/option_name_create_inspiration" />

        <TextView
            android:id="@+id/tvStartAgain"
            android:layout_height="50dp"
            android:layout_width="90dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/bg_option_main"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/option_name_start_again" />
    </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>