<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activities.RemoveObstacle"
    android:background="@color/green_background_initial">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/tbRemoveObstacle"
      android:layout_width="match_parent"
      android:layout_height="?android:attr/actionBarSize"
      app:layout_constraintTop_toTopOf="parent"
      android:background="@color/white"
      app:title="@string/ACTIVITY_TITLE_REMOVE_OBSTACLE"/>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/clRemoveObstacle"
      android:layout_width="match_parent"
      android:layout_height="640dp"
      android:background="@drawable/background_panel"
      android:orientation="vertical"
      android:layout_margin="10dp"
      android:paddingBottom="10dp"
      app:layout_constraintTop_toBottomOf="@+id/tbRemoveObstacle"
      app:layout_constraintBottom_toBottomOf="parent"
      >


    <com.google.android.material.textfield.TextInputLayout
        android:paddingTop="5dp"
        android:id="@+id/tilObstacle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/etSetObstacleName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textLongMessage"
          android:layout_marginTop="10dp"
          android:maxLength="15"
          android:textSize="16sp"
          android:hint="@string/ACTIVITY_HINT_OBSTACLE_NAME"/>
    </com.google.android.material.textfield.TextInputLayout>

    <DatePicker
        android:id="@+id/dpObstacle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tilObstacle"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"

        />

    <LinearLayout
        android:id="@+id/llButtonsObstacle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

      <Button
          android:id="@+id/btnAccept"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginRight="10dp"
          android:layout_marginLeft="15dp"
          android:layout_weight="1"
          android:text="@string/ACTIVITY_LABEL_ACCEPT_BTN"
          android:textColor="@color/white"
          android:textSize="@dimen/btn_text_size"
          android:backgroundTint="@color/green_button"
          />
      <Button
          android:id="@+id/btnCancel"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginRight="10dp"
          android:layout_marginLeft="15dp"
          android:layout_weight="1"
          android:text="@string/ACTIVITY_LABEL_CANCEL_BTN"
          android:textColor="@color/white"
          android:textSize="@dimen/btn_text_size"
          android:backgroundTint="@color/green_button"/>
    </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>