<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CreateInspiration"
    android:background="@color/green_background_initial">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbCreateInspiration"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        app:title="@string/ACTIVITY_TITLE_INSPIRATIONS"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCreateInspiration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tbCreateInspiration"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_panel"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tvSelectGoalLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/ACTIVITY_LABEL_SELECT_GOAL"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rgSelectedGoals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/radio_group_background"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSelectGoalLabel" />

        <TextView
            android:id="@+id/tvSetPhrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/ACTIVITY_LABEL_INSERT_PHRASE"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/rgSelectedGoals" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/tilPhrase"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tvSetPhrase">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etSetPhrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/fl_drawing_view_container"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_margin="5dp"
            android:padding="1dp"
            app:layout_constraintTop_toBottomOf="@+id/tilPhrase">

            <!-- In FrameLayout the component which are
       added below are in foreground and added above are in Background.-->

            <ImageView
                android:id="@+id/iv_GoalImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabLoadPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16sp"
                app:srcCompat="@drawable/action_add_button" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabRemovePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_margin="16sp"
                app:srcCompat="@drawable/action_remove_button" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#6ABB6F"
                android:text="@string/ACTIVITY_LABEL_ACCEPT_BTN"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:backgroundTint="#6ABB6F"
                android:text="@string/ACTIVITY_LABEL_CANCEL_BTN"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
